# LianLianKanSolver

./: .gitignore  CMakeLists.txt  README.md
src/: board.c  board.h  calculate.c  calculate.h  click.c  click.h  main.c  solution.c  solution.h  solve.c  solve.h
src/api/: api.c  api.h
src/solve/: board.h  click.c  click.h  solve.c  solve.h
src/ui/: gui.c  gui.h
